fixed i to align with header tag

--- a/Public/style.css
+++ b/Public/style.css
@@ -24,6 +24,9 @@ p {
 
 i {
   padding-top: -10px;
+  text-align: left;
+  padding-left: 6.3%;
+  color: white;
 }
 
 nav {
